force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Filter_Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Filter_Field_Number__c</fullName>
    <label>Step Filter Field Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>