force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Filter_Field_Object__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Filter_Field_Object__c</fullName>
    <label>Step Filter Field Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>