force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Filter_Field_Value_Object_Source__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Filter_Field_Value_Object_Source__c</fullName>
    <description>The source of the field value object</description>
    <label>Step Filter Field Value Object Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>