force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Group__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Group</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Step Groups</relationshipLabel>
    <relationshipName>Step_Group</relationshipName>
    <type>Lookup</type>
</CustomField>