force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Group_Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Group_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Step Group Active</label>
    <type>Checkbox</type>
</CustomField>