force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Notify_Only__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Notify_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the approver receives only a notification for the approval request (when set to true) or gets the request assigned to them in addition to receiving a notification (when set to false, which is the default).</description>
    <inlineHelpText>Indicates whether the approver receives only a notification for the approval request (when set to true) or gets the request assigned to them in addition to receiving a notification (when set to false, which is the default).</inlineHelpText>
    <label>Step Notify Only</label>
    <type>Checkbox</type>
</CustomField>