force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__Step_Seq_Number__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Step_Seq_Number__c</fullName>
    <label>Step Seq #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>