force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepAutoReapprovalCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepAutoReapprovalCriteria__c</fullName>
    <description>The auto re-approval criteria for the step</description>
    <inlineHelpText>The auto re-approval criteria for the step</inlineHelpText>
    <label>Step Auto Reapproval Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>