force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepAutoReapprove__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepAutoReapprove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether auto re-approval is enabled for the step. This indicator is maintained by the system.</description>
    <inlineHelpText>Indicates whether auto re-approval is enabled for the step. This indicator is maintained by the system.</inlineHelpText>
    <label>Step Auto Reapprove</label>
    <type>Checkbox</type>
</CustomField>