force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepCarbonCopyAssigneeIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepCarbonCopyAssigneeIds__c</fullName>
    <description>Contains a list of user ids that should receive carbon copy notifications along with assigned approvers for a request associated with a given step.</description>
    <inlineHelpText>Contains a list of user ids that should receive carbon copy notifications along with assigned approvers for a request associated with a given step.</inlineHelpText>
    <label>Step Carbon Copy Assignee Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>