force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepCarbonCopyUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepCarbonCopyUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Carbon Copy User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>