force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepDisplayFieldNameHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepDisplayFieldNameHeader__c</fullName>
    <description>The API name of the header field to display for the step</description>
    <inlineHelpText>The API name of the header field to display for the step</inlineHelpText>
    <label>Step Display Field Name Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>