force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepDisplayFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepDisplayFieldNames__c</fullName>
    <description>The API names of the fields to display for the step</description>
    <inlineHelpText>The API names of the fields to display for the step</inlineHelpText>
    <label>Step Display Field Names</label>
    <type>TextArea</type>
</CustomField>