force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepExpectedDaysToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepExpectedDaysToComplete__c</fullName>
    <description>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
    <inlineHelpText>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
    <label>Step Expected Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>