force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepExpectedMinutesToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepExpectedMinutesToComplete__c</fullName>
    <description>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</description>
    <inlineHelpText>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</inlineHelpText>
    <label>Step Expected Minutes To Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>