force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepFilterLogic__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepFilterLogic__c</fullName>
    <description>The step criteria filter logic expression</description>
    <label>Step Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>