force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepKeyFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepKeyFieldNames__c</fullName>
    <description>The API names of the fields which comprise the key for the child object.</description>
    <inlineHelpText>The API names of the fields which comprise the key for the child object.</inlineHelpText>
    <label>Step Key Field Names</label>
    <type>TextArea</type>
</CustomField>