force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepSkipUnresolvedAssignee__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSkipUnresolvedAssignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</description>
    <inlineHelpText>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</inlineHelpText>
    <label>Step Skip Unresolved Assignee</label>
    <type>Checkbox</type>
</CustomField>