force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepSubmissionComment3Enabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSubmissionComment3Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</description>
    <inlineHelpText>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</inlineHelpText>
    <label>Step Submission Comment 3 Enabled</label>
    <type>Checkbox</type>
</CustomField>