force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepSubmissionCommentsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSubmissionCommentsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</description>
    <inlineHelpText>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</inlineHelpText>
    <label>Step Submission Comments Enabled</label>
    <type>Checkbox</type>
</CustomField>