force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__StepType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepType__c</fullName>
    <description>The Step Type</description>
    <inlineHelpText>The Step Type</inlineHelpText>
    <label>Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Subprocess</fullName>
            </value>
            <value>
                <fullName>Child Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>