force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__SubmissionComment1Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionComment1Label__c</fullName>
    <description>Enter the name of a custom label containing text that will be used as the label when entering a process comment or the first of up to three comments at the step level.</description>
    <inlineHelpText>Enter the name of a custom label containing text that will be used as the label when entering a process comment or the first of up to three comments at the step level.</inlineHelpText>
    <label>Submission Comment 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>