force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__SubmissionCommentsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionCommentsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to enable submission comments for this process at either the process or step level.  When enabled, the user will be prompted to enter submission comments when the request is submitted for approval.</description>
    <inlineHelpText>Set this flag to enable submission comments for this process at either the process or step level.  When enabled, the user will be prompted to enter submission comments when the request is submitted for approval.</inlineHelpText>
    <label>Submission Comments Enabled</label>
    <type>Checkbox</type>
</CustomField>