force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__SubmissionCommentsMandatory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionCommentsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to make submission comments mandatory for this process at the process level. When set, the user will be forced to enter submission comments when the request is submitted for approval.</description>
    <inlineHelpText>Set this flag to make submission comments mandatory for this process at the process level. When set, the user will be forced to enter submission comments when the request is submitted for approval.</inlineHelpText>
    <label>Submission Comments Mandatory</label>
    <type>Checkbox</type>
</CustomField>