force-app/main/default/objects/Apttus_Approval__Approval_Process__c/fields/Apttus_Approval__SubmissionCommentsPerStep__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionCommentsPerStep__c</fullName>
    <description>Select the number of submission comments allowed per step (up to three) when step level comments are enabled.  This value defaults to one whenever process level comments are used since there can only be a single submission comment at the process level.</description>
    <inlineHelpText>Select the number of submission comments allowed per step (up to three) when step level comments are enabled.  This value defaults to one whenever process level comments are used since there can only be a single submission comment at the process level.</inlineHelpText>
    <label>Submission Comments Per Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>