force-app/main/default/objects/Apttus_Approval__Approval_Process__c/recordTypes/Apttus_Approval__ApprovalProcess.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Approval__ApprovalProcess</fullName>
    <active>true</active>
    <description>Approval Process</description>
    <label>Approval Process</label>
</RecordType>