force-app/main/default/objects/Apttus_Approval__Approval_Process__c/recordTypes/Apttus_Approval__StepGroup.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Approval__StepGroup</fullName>
    <active>true</active>
    <description>Step Group</description>
    <label>Step Group</label>
</RecordType>