force-app/main/default/objects/Apttus_Approval__Approval_Process__c/recordTypes/Apttus_Approval__StepGroupAction.recordType-meta.xml
<RecordType>
    <fullName>Apttus_Approval__StepGroupAction</fullName>
    <active>true</active>
    <description>Step Group Action</description>
    <label>Step Group Action</label>
</RecordType>