force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Active__c</columns>
    <columns>Apttus_Approval__Process_Name__c</columns>
    <columns>Apttus_Approval__Object_Label__c</columns>
    <columns>Apttus_Approval__Object_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>