force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__ApprovalProcesses.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__ApprovalProcesses</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Active__c</columns>
    <columns>Apttus_Approval__Sequence__c</columns>
    <columns>Apttus_Approval__Process_Name__c</columns>
    <columns>Apttus_Approval__Object_Label__c</columns>
    <columns>Apttus_Approval__Object_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__ApprovalProcess</value>
    </filters>
    <filters>
        <field>Apttus_Approval__Process_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Approval Processes</label>
</ListView>