force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__EntryCriteria.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__EntryCriteria</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Entry_Criteria__c</columns>
    <columns>Apttus_Approval__Entry_Criteria_Field__c</columns>
    <columns>Apttus_Approval__Entry_Criteria_Comparison_Type__c</columns>
    <columns>Apttus_Approval__Entry_Criteria_Field_Value__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__EntryCriteria</value>
    </filters>
    <label>Entry Criteria</label>
</ListView>