force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__FinalActions.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__FinalActions</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Final_Approval_Action__c</columns>
    <columns>Apttus_Approval__Final_Action_Type__c</columns>
    <columns>Apttus_Approval__Final_Action_Field_Name__c</columns>
    <columns>Apttus_Approval__Final_Action_Field_Update_Type__c</columns>
    <columns>Apttus_Approval__Final_Action_Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__FinalAction</value>
    </filters>
    <label>Final Actions</label>
</ListView>