force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__InitialSubmissionActions.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__InitialSubmissionActions</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Initial_Submission_Action__c</columns>
    <columns>Apttus_Approval__Initial_Submission_Field_Name__c</columns>
    <columns>Apttus_Approval__Initial_Submission_Action_Type__c</columns>
    <columns>Apttus_Approval__Initial_Submission_Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__InitialSubmissionAction</value>
    </filters>
    <label>Initial Submission Actions</label>
</ListView>