force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__StepFilterCriteria.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__StepFilterCriteria</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Filter__c</columns>
    <columns>Apttus_Approval__Step_Filter_Field__c</columns>
    <columns>Apttus_Approval__Step_Filter_Comparison_Type__c</columns>
    <columns>Apttus_Approval__Step_Filter_Field_Object__c</columns>
    <columns>Apttus_Approval__Step_Filter_Field_Value__c</columns>
    <columns>Apttus_Approval__Step_Filter_Field_Object_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__StepFilterCriteria</value>
    </filters>
    <label>Step Filter Criteria</label>
</ListView>