force-app/main/default/objects/Apttus_Approval__Approval_Process__c/listViews/Apttus_Approval__StepGroupAction.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__StepGroupAction</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Step_Group_Action__c</columns>
    <columns>Apttus_Approval__Step_Group_Action_Field_Name__c</columns>
    <columns>Apttus_Approval__Step_Group_Action_Field_Update_Type__c</columns>
    <columns>Apttus_Approval__Step_Group_Action_Field_Value__c</columns>
    <columns>Apttus_Approval__Step_Group_Action_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__StepGroupAction</value>
    </filters>
    <label>Step Group Action</label>
</ListView>